--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -37,8 +37,8 @@
     <h1>プライバシーポリシー</h1>
     
     <div class="section">
-        <p><strong>最終更新日:</strong> 2024年6月26日</p>
-        <p>このプライバシーポリシーは、タロットカードアプリ（以下「本アプリ」）における個人情報の収集、使用、保護について説明します。</p>
+        <p><strong>最終更新日:</strong> 2025年6月26日</p>
+        <p>このプライバシーポリシーは、シンプルタロット占いアプリ（以下「本アプリ」）における個人情報の収集、使用、保護について説明します。</p>
     </div>
 
     <div class="section">
